bin_PROGRAMS = learn_1 test_1
test_1_SOURCES = calcfunc.h calcfunc.cc utils.h utils.cc feature.cc feature.h crftest.cc
learn_1_SOURCES = calcfunc.h calcfunc.cc utils.h utils.cc feature.cc feature.h crflearn.cc train.cc train.h
learn_1_LDADD = /leofs/dbu/zhanghaicang/contact_prediction/lib/lib/liblbfgs.a
INCLUDE = -I/leofs/dbu//zhanghaicang/contact_prediction/lib/include
